Fixed some shadowing and correct z-indexing, images (flex) shoud go under the shadow of the toolbar

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -40,6 +40,10 @@ md-list-item a:hover {
     background-color: black;
 }
 
+.md-whiteframe-glow-z2 {
+  box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2), 0px 0 4px 3px rgba(0, 0, 0, 0.14), 0px 0px 8px 1px rgba(0, 0, 0, 0.12);
+  z-index: 10;
+}
 
 .card-image-trans {
     background: #fff;
